--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "sass": "^1.93.2"
+    "react-hook-form": "^7.66.1",
+    "sass": "^1.93.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
