--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/react": "^19.1.16",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "babel-jest": "^30.2.0",
@@ -39,6 +40,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "ts-jest": "^29.4.6",
     "vite": "^7.1.7"
   }
 }
